# rollup-wasm-demo

./: .gitignore  babel.config.js  index.js  package-lock.json  package.json  rollup.config.ts
assets/: rust-4b02a0db.wasm
rust/: Cargo.toml
rust/src/: lib.rs
